# BioFW

./: CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/include/BioFW/: Core.h  Exception.h  Progress.h  Training.h
Core/include/BioFW/Block/: IBlock.h  IComparisonBlock.h  IProcessingBlock.h  ITemplateExtractingBlock.h
Core/include/BioFW/Comparison/: ComparisonScore.h  IComparator.h  IFeatureVectorComparator.h
Core/include/BioFW/Database/: BiometricID.h  Database.h  IDatabaseCreator.h  IRecord.h  Record.h  RecordSelection.h
Core/include/BioFW/Evaluation/: IBlockEvaluator.h  IBlockTraining.h  IMethodResult.h  MethodResults.h  Result.h  Results.h
Core/include/BioFW/FeatureVector/: IFeatureVectorExtractor.h
Core/include/BioFW/Template/: IPersistentTemplate.h  IPersistentTemplateCreator.h  ITemplate.h  ITemplateCreator.h  ITemplateSerializer.h
Core/src/: Exception.cpp  Progress.cpp
Core/src/Comparison/: ComparisonScore.cpp
Core/src/Database/: BiometricID.cpp  IRecord.cpp  Record.cpp
Core/src/Database/Reference/: BiometricReferenceDataRecord.cpp
Core/src/Evaluation/: MethodResults.cpp  Result.cpp  Results.cpp
Core/src/Evaluation/Statistics/: BasicStatistics.cpp  Extremes.cpp  IThreshFinder.cpp  ThreshedStatistics.cpp  ThreshedStatisticsSettings.cpp
Core/src/Template/: IPersistentTemplate.cpp  IPersistentTemplateCreator.cpp
OpenCV/: CMakeLists.txt
OpenCV/include/BioFW/: MatProvider.cpp  MatProvider.h
OpenCV/include/BioFW/BiometricSample/: MatSample.cpp  MatSample.h
OpenCV/include/BioFW/Comparison/: CosineComparison.h  HistogramComparison.h  NormComparator.h
OpenCV/include/BioFW/FeatureVector/: ChainedFeatureExtractor.h  MatFV.cpp  MatFV.h
OpenCV/include/BioFW/Utils/: ResultsOverview.h
OpenCV/src/Utils/: ResultsOverview.cpp
Standard/: CMakeLists.txt
Standard/src/Template/: MemoryPersistentTemplate.cpp
examples/: CMakeLists.txt
examples/face/: CMakeLists.txt
examples/face/src/: main.cpp
(+84 files in other folders)
